* (bug 11266) Set fallback language for Fulfulde (ff) to French
* (bug 11179) Include image version deletion comment in public log
* (bug 11158) Fix escaping in API HTML-formatted JSON
* Speed up Special:UncategorizedPages and Special:Deadendpages (no longer marked
  as slow queries). They now add blank ('','') entries for pages without ANY links
  or categories.

=== API changes in 1.12 ===

Full API documentation is available at http://www.mediawiki.org/wiki/API

* (bug 11275) Enable descending sort in categorymembers

=== Languages updated in 1.12 ===

* Arabic (ar)
* Mapudungun (arn) (new)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bengali (bn)
* Cassubian (csb)
* Welsh (cy)
* Danish (da)
* German (de)
* Persian (fa)
* Võro (fiu-vro)
* Frisian (fy)
* French (fr)
* Hebrew (he)
* Upper Sorbian (hsb)
* Icelandic (is)
* Kazakh (kk)
* Korean (ko)
* Dutch (nl)
* Slovak (sk)
* Serbian (Cyrillic) (sr-ec)
* Sakha (sah)
* Zealandic (zea)

== Compatibility ==

MediaWiki 1.12 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.12 has several database changes since 1.11, and will not work without schema
updates.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could
break. Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed upgrade instructions.


=== Caveats ===

Some output, particularly involving user-supplied inline HTML, may not